tests/baselines/reference/importedModuleAddToGlobal.errors.txt
tests/cases/compiler/importedModuleAddToGlobal.ts(15,23): error TS2833: Cannot find namespace 'b'. Did you mean 'B'?


==== tests/cases/compiler/importedModuleAddToGlobal.ts (1 errors) ====
    // Binding for an import statement in a typeref position is being added to the global scope
    // Shouldn't compile b.B is not defined in C
    module A {
        import b = B;
        import c = C;
    }
    
    module B {
        import a = A;
        export class B { }
    }
    
    module C {
        import a = A;
        function hello(): b.B { return null; }
                          ~
!!! error TS2833: Cannot find namespace 'b'. Did you mean 'B'?
!!! related TS2728 tests/cases/compiler/importedModuleAddToGlobal.ts:8:8: 'B' is declared here.
    }